--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
